syntax = "proto3";

package sum;

option java_package = "com.proto.sum";
option java_multiple_files = true;

message SumRequest {
    int64 number1 = 1;
    int64 number2 = 2;
}

message SumResponse {
    int64 result = 1;
}

service SumService {
    rpc Sum(SumRequest) returns (SumResponse){}
}
